test: address sonar warnings